fix double border issue when code is nested inside a <pre> tag

--- a/bolt.css
+++ b/bolt.css
@@ -254,6 +254,7 @@ pre {
 
 pre > code {
   padding: 10px;
+  border: 0;
   display: block;
   overflow-x: auto;
 }
